yamlnew/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.network/net-10.9.0.0: "true"
    io.kompose.service: cache
  name: cache-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cache
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/net-10.9.0.0: "true"
        io.kompose.service: cache
    spec:
      containers:
        - image: redis
          name: cache
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
