yamlnew/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.network/net-10.9.0.0: "true"
    io.kompose.service: frontend
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/net-10.9.0.0: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: seng_468-frontend
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
