yamlnew/quote-queuer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.network/net-10.9.0.0: "true"
    io.kompose.service: quote-queuer
  name: quote-queuer-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quote-queuer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/net-10.9.0.0: "true"
        io.kompose.service: quote-queuer
    spec:
      containers:
        - image: seng_468-quote_queuer
          imagePullPolicy: IfNotPresent
          name: quote-queuer
          resources: {}
      restartPolicy: Always
status: {}
