yamlnew/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.network/net-10.9.0.0: "true"
    io.kompose.service: rabbitmq
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/net-10.9.0.0: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.8.17-management-alpine
          livenessProbe:
            exec:
              command:
                - nc
                - -z
                - localhost
                - "5672"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}
