yamlnew/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.network/net-10.9.0.0: "true"
    io.kompose.service: backend
  name: backend
spec:
  clusterIP: 10.9.0.4
  type: ClusterIP
  ports:
    - name: backend-port
      #nodePort: 31234
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
