yamlnew/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: cache
  name: cache
spec:
  clusterIP: 10.9.0.7
  type: ClusterIP
  ports:
    - name: cache-port
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: cache
status:
  loadBalancer: {}
