yamlnew/mongo_db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seng-trade-app
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.network/net-10.9.0.0: "true"
    io.kompose.service: mongo-db
  name: mongo-db
spec:
  clusterIP: 10.9.0.3
  type: ClusterIP
  ports:
    - name: mongo-port
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo-db
status:
  loadBalancer: {}
