yamlnew/net-10.9.0.0-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: seng-trade-app
  name: net-10.9.0.0
spec:
  podSelector:
    matchLabels:
      io.kompose.network/net-10.9.0.0: "true"
  # policyTypes:
  #   - Ingress
  #   - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/net-10.9.0.0: "true"
